# wsc

./: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.example.yaml  index.js  index.json  package.json  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: milanintel_layer1.yml
artifacts/: .gitkeep
data/: .gitkeep
imports/google_ads/: .gitkeep  example_export.json
imports/meta_ads/: .gitkeep  example_export.json
logs/: .gitkeep
milanintel/: __init__.py  __main__.py  cli.py  config.py  models.py  storage.py  utils.py
milanintel/collectors/: __init__.py  ads.py  base.py  email.py  jobs.py  web.py
